syntax="proto2";
package protocol;
//魔物数据
message Soldier
{
	required int32 schemeId=1;			//魔物 base id
	required int32 level=2;				//魔物等级
	required int32 stage=3;				//品阶等级 1：一阶 2：二阶 3：三阶
	repeated SkillLevel skillLevel=4;		//技能等级
	required int32 num=5;				//数量
	required int32 exp=6;				//经验
	required int64 timestamp = 7;		//升阶截止时间戳
	required int64 evoSpeedTimeStamp = 8;//升阶加速累计开始时间
	required int32 active = 9;
	required int64 autoId = 10; 		//地图上魔物的自增id
}

message SkillLevel{
	required int32 skillId =1;
	required int32 skillLevel=2;
}

message LostSoldier{
	required int32 schemeId 	= 1;//scheme id
	required int32 num 			= 2;
}

//all
message AllSoldiers
{
	repeated Soldier soldiersInCamp = 1;
	repeated Soldier soldiersInMap = 2;
}

message MsgSoldierAllReq{

}

message MsgSoldierAllRet{
	repeated Soldier soldiersInCamp = 1;
	repeated Soldier soldiersInMap = 2;
}

//變更通知
message MsgSoldierNotify{
	required Soldier soldier = 1;
}

//魔物合成
message MsgSoldierCreateReq{
	required int32 soldierId=1;//魔物Id
	required int32 amount=2;//合成数量
}
//创建
message MsgSoldierCreateRet{
	required int32 retCode=1;
	required int32 soldierId=2;//魔物Id
	required int32 amount=3;   //總数量
}
//升级
message MsgSoldierLvRet{
	required int32 retCode=1;
	required int32 level=2;
	required int32 exp=3;
}

//魔物进阶
message MsgSoldierUpgradeReq{
	required int32 soldierId=1; //魔物Id
	required int64 heroId=2;
	required bool usedCoin=3;
}

message MsgSoldierUpgradeRet{
	required int32 retCode=1;
	required int64 timestamp = 2; //升阶截止时间戳
	required int64 evoSpeedTimeStamp = 3;//升阶开始时间戳
}

//使用货币移除升级时间，马上升级
message MsgSoldierRemoveUpgradeTimeReq{
	required int32 soldierId=1;//魔物id
}

message MsgSoldierRemoveUpgradeTimeRet{
	required int32 retCode=1;
}

//魔物进阶加速
message MsgSoldierCutDownUpgradeTimeReq{
	required int32 soldierId=1; //魔物Id
}
message MsgSoldierCutDownUpgradeTimeRet{
	required int32 retCode=1;
	optional int64 evoSpeedTimeStamp = 2;//升阶开始时间戳
}
//检查是否完成升階
message MsgSoldierFinishUpgradeReq{
	required int32 soldierId=1;
}

message MsgSoldierFinishUpgradeRet{
	required int32 retCode=1;
	required int32 soldierId=2;
	required int32 stage=3;
}

//魔物技能强化请求
message MsgSoldierSkillLvReq{
	required int32 soldierId=1;//魔物Id
	required int32 skillId=2;//技能ID
}

message MsgSoldierSkillLvRet{
	required int32 retCode=1;
}

//地图事件
message SoldierEvent {
	required int32  eventId    = 1;
	required int64	startTime  = 2; //发生的时间
	required int64	endTime    = 3; //结束的时间
	required int64	duration   = 4; //动作持续时间,秒 A
	required int32	eventType  = 5; //事件类型， 1恶斗，2生蛋，3生病
	required int32	remote     = 6; //A soldier id in map
	required int32	local      = 7; //B soldier id
	optional int32	levelTotal = 8; //A和B的等级和，生成事件的时候计算
}
//事件
message AllSoldiersEvents{
	repeated SoldierEvent events1 = 1;
	repeated SoldierEvent events2 = 2;
	repeated SoldierEvent events3 = 3;
}
//所有事件
message MsgSoldierAllEventsReq {

}

message MsgSoldierAllEventsRet {
	required AllSoldiersEvents allEvents = 1;
}
//处理地图事件
message MsgSoldierEventDealWithReq {
	required int32 eventType = 1;
	required int32 eventId = 2;
}

message MsgSoldierEventDealWithRet {
	required int32 retCode = 1;
}